# botaniclone-datapack

./: .gitignore  BUILD.md  README.md  Versions.md  beet-1.20.yaml  beet-1.21.yaml  beet.yaml  pyproject.toml
plugins/: block_table.py  folder_convention.py  legacy_filter.py  options_table.py  pack_meta.py  validate.py  zip_artifact.py
src/data/botaniclone/advancements/: use_bonemeal.json
src/data/botaniclone/functions/: _migrate.mcfunction  _use_bonemeal.mcfunction  load.mcfunction  tick.mcfunction
src/data/guris/functions/_interact/: dispatch.mcfunction  effect.mcfunction  found.mcfunction  get.mcfunction  init.mcfunction  move.mcfunction  raytrace.mcfunction  remove.mcfunction
src/data/guris/loot_tables/: brown_mushroom.json  dead_bush.json  fern.json  grass.json  hanging_roots.json  large_fern.json  mangrove_propagule.json  nether_sprouts.json  nether_wart.json  red_mushroom.json  seagrass.json  tall_grass.json  vine.json
src/data/guris/predicates/: bonemeal.json
src/data/guris/tags/blocks/: ancient_plants.json  available.json  mushroom_blocks.json  nether_roots.json  non-optionals.json  tall_grasses.json
src/data/minecraft/tags/functions/: load.json  tick.json
src/tables/: blocks.yaml  options.yaml
